[workspace]
members = [
    "tonic",
    "tonic-build",
    "tonic-health",
    "tonic-types",

    # Non-published crates
    "examples",
    "interop",

    # Tests
    "tests/included_service",
    "tests/same_name",
    "tests/wellknown",
    "tests/extern_path/uuid",
    "tests/ambiguous_methods",
    "tests/extern_path/my_application",
    "tests/integration_tests"
]

[patch.crates-io]
prost = { git = "https://github.com/discord/prost", rev = "e36bd840c3905ba8b9c059d6c9b3dc20eb6449d7" }
prost-types = { git = "https://github.com/discord/prost", rev = "e36bd840c3905ba8b9c059d6c9b3dc20eb6449d7" }
prost-build = { git = "https://github.com/discord/prost", rev = "e36bd840c3905ba8b9c059d6c9b3dc20eb6449d7" }
prost-derive = { git = "https://github.com/discord/prost", rev = "e36bd840c3905ba8b9c059d6c9b3dc20eb6449d7" }
